force-app/main/default/objects/Job__c/fields/AttachmentUrl__c.field-meta.xml
<CustomField>
    <fullName>AttachmentUrl__c</fullName>
    <description>The alternate URL where the attachment can be downloaded.</description>
    <inlineHelpText>Enter an alternate URL where the attachment can be downloaded.</inlineHelpText>
    <label>Attachment URL</label>
    <type>Url</type>
</CustomField>