force-app/main/default/objects/Job__c/fields/ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate__c</fullName>
    <description>The date after which applications will no longer be accepted for this position.</description>
    <inlineHelpText>Indicate the date after which applications will no longer be accepted for this position.</inlineHelpText>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>