force-app/main/default/objects/Job__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>