force-app/main/default/objects/Job__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the record is active and should be displayed on relevant pages.</description>
    <inlineHelpText>Check to indicate the record is active and should be displayed on relevant pages.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>