force-app/main/default/objects/Job__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The city and state where the position is located.</description>
    <inlineHelpText>Indicate the city and state where the position is located.</inlineHelpText>
    <label>Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>