force-app/main/default/objects/Job__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <label>MemberId</label>
    <length>22</length>
    <type>Text</type>
</CustomField>