force-app/main/default/objects/Job__c/fields/OpenUntilFilled__c.field-meta.xml
<CustomField>
    <fullName>OpenUntilFilled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that applications will be accepted until the position has been filled.</description>
    <inlineHelpText>Check to indicate that applications will be accepted until the position has been filled.</inlineHelpText>
    <label>Open Until Filled</label>
    <type>Checkbox</type>
</CustomField>