force-app/main/default/objects/Job__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Name of the organization hiring for this position.</description>
    <inlineHelpText>Enter the name of the organization hiring for this position.</inlineHelpText>
    <label>Organization</label>
    <length>60</length>
    <type>Text</type>
</CustomField>