force-app/main/default/objects/Job__c/fields/PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PostingDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the job was posted.</description>
    <inlineHelpText>Indicate the date the job is posted.</inlineHelpText>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>