force-app/main/default/objects/Job__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>The salary an applicant is to be paid.</description>
    <inlineHelpText>Indicate the salary an applicant can expect to be paid.</inlineHelpText>
    <label>Salary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>