force-app/main/default/objects/Job__c/listViews/ActiveJobs.listView-meta.xml
<ListView>
    <fullName>ActiveJobs</fullName>
    <columns>IsActive__c</columns>
    <columns>NAME</columns>
    <columns>Salary__c</columns>
    <columns>AttachmentUrl__c</columns>
    <columns>PostingDate__c</columns>
    <columns>ClosingDate__c</columns>
    <columns>Location__c</columns>
    <columns>OpenUntilFilled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Jobs</label>
    <language>en_US</language>
</ListView>