force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Salary__c</columns>
    <columns>PostingDate__c</columns>
    <columns>ClosingDate__c</columns>
    <columns>Location__c</columns>
    <columns>OpenUntilFilled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>